--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -20,6 +20,7 @@
 
         <div class="wrap-header">
             <div class="header">
+                <a href="/">На главную</a>
                 <div class="logo"></div>
                 <div class="search"></div>
             </div>
