--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@
     height: 100px;
     border: 1px solid #ccc;
     margin: 0px auto;
-    background-color: #3c763d;
+    background-color: #D7D7D7;
 }
 /* body */
 .wrap-body .body {
