--- a/module/User/view/user/login/login.phtml
+++ b/module/User/view/user/login/login.phtml
@@ -8,7 +8,7 @@ echo 'login';
 <form method="post" action="/user/login/process">
     <dl>
         <dt>Введите Email</dt>
-        <dd><input name="email" type="text"/></dd>
+        <dd><input name="email" type="email"/></dd>
         <dt>Введите пароль</dt>
         <dd><input name="password" type="password"/></dd>
         <dt>&nbsp;</dt>
