--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,9 +14,9 @@ input[type=tel],
 input[type=number],
 input[type=color],
 input[type=email],
-input[type=button]{
+input[type=button],
+textarea {
     border: 1px solid #ccc;
-    margin:5px;
     padding: 5px;
 }
 /* header */
@@ -66,7 +66,7 @@ input[type=button]{
     border: 1px solid #ccc;
 }
 .search-result-item:hover {
-    
+
 }
 /* footer */
 .wrap-footer .footer {
