refactor upload module

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -20,7 +20,7 @@
 
         <div class="wrap-header">
             <div class="header">
-                <a href="/">на главную</a>
+                <a href="/">home</a>
                 <div class="logo"></div>
                 <div class="search"></div>
             </div>
@@ -32,7 +32,8 @@
                     <div class="menu">
                          <a href="/post/search">search</a><br/>
                          <a href="/post/search/?user=<?php echo $this->getServiceManager()->get('logged_in_user_id'); ?>">my</a><br/>
-                        <a href="/post/add">post+</a>
+                        <a href="/post/add">post+</a><br/>
+                        <a href="/upload">upload</a>
                     </div>
                 </div>
                 <div class="wrap-content">
