--- a/module/Post/view/post/post/edit.phtml
+++ b/module/Post/view/post/post/edit.phtml
@@ -5,13 +5,12 @@ $form->prepare();
 
 <?php echo $this->form()->openTag($form); ?>
 <div class="form-list">
-    <?php $index = 0; ?>
     <?php foreach ($form as $element) : ?>
-        <div class="form-list-item-<?php echo ++$index . ' field-' . $element->getName(); ?>">
-            <div class="title"><?php echo $this->formLabel($element); ?></div>
+        <div class="<?php echo 'block-' . $element->getName(); ?>">
+            <div class="label"><?php echo $this->formLabel($element); ?></div>
             <div class="error"><?php echo $this->formElementErrors($element); ?></div>
             <div class="field"><?php echo $this->formElement($element); ?></div>
         </div>
     <?php endforeach; ?>
 </div>
-<?php echo $this->form()->closeTag() ?>
+<?php echo $this->form()->closeTag(); ?>
