--- a/module/Upload/view/upload/upload/add.phtml
+++ b/module/Upload/view/upload/upload/add.phtml
@@ -5,9 +5,8 @@ $form->prepare();
 
 <?php echo $this->form()->openTag($form); ?>
 <div class="form-list">
-    <?php $index = 0; ?>
     <?php foreach ($form as $element) : ?>
-        <div class="form-list-item-<?php echo ++$index . ' field-' . $element->getName(); ?>">
+        <div class="<?php echo 'block-' . $element->getName(); ?>">
             <div class="title"><?php echo $this->formLabel($element); ?></div>
             <div class="error"><?php echo $this->formElementErrors($element); ?></div>
             <div class="field"><?php echo $this->formElement($element); ?></div>
