--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -7,7 +7,7 @@ $user = $userTable->getUserById($loggedInUserId);
 //echo json_encode($user->getArrayCopy());
 //echo $user->get('email');
 ?>
-<a href="/user/login">войти</a><br/>
-<a href="/user/register">регистрация</a><br/>
-<a href="/user/logout">выйти</a><br/>
+<a href="/user/login">login</a><br/>
+<a href="/user/register">register</a><br/>
+<a href="/user/logout">logout</a><br/>
 <?php echo isset($user) ? 'вы вошли как: ' . $user->get('email') : ''; ?><br/>
