--- a/module/Post/view/helper/attachment/view.phtml
+++ b/module/Post/view/helper/attachment/view.phtml
@@ -7,7 +7,7 @@ $sm = $this->getServiceLocator();
 
 <div class="widget">
 
-    <div class="widget-title"><h3>Attachment View Widget</h3></div>
+    <div class="widget-title">view attachment widget</div>
 
     <div class="widget-body">
 
