--- a/module/Upload/view/helper/upload/add.phtml
+++ b/module/Upload/view/helper/upload/add.phtml
@@ -1,17 +1,20 @@
-<?php
-
-use \Upload\Model\Upload; ?>
-
 <div class="widget">
-
-    <div class="widget-title">add attachment widget</div>
+    <div class="widget-title">upload add widget for <?php echo "[u:$currentUserId]"; ?></div>
 
     <div class="widget-body">
-        
+
+        <?php
+        $messages = $this->flashMessenger()->getMessagesFromNamespace($form->getName());
+        if (count($messages)) {
+            foreach ($messages as $message) {
+                $form->setMessages($message);
+            }
+        }
+        ?>
+
         <?php
         $form = $this->form;
         $form->prepare();
-        $form->setAttribute('action', "/attachment/process/$postId");
         ?>
 
         <?php echo $this->form()->openTag($form); ?>
@@ -25,8 +28,5 @@ use \Upload\Model\Upload; ?>
             <?php endforeach; ?>
         </div>
         <?php echo $this->form()->closeTag() ?>
-
-
     </div>
-
 </div>
